--- a/src/config.h.in
+++ b/src/config.h.in
@@ -9,6 +9,11 @@
  * variables, so you can insert them here too.
  */
 
+ /* Note from PikaJade:
+ ** I modified the values here and they worked just fine.
+ ** Either I got lucky (more likely), or the above comment is on something.
+ */
+
 #ifdef CMAKECONFIG
 
 #define SRB2_COMP_REVISION       "${SRB2_COMP_REVISION}"
@@ -43,6 +48,7 @@
  * Last updated 2025 / 01 / 16 - v2.2.14 - main assets
  * Last updated 2025 / 01 / 24 - v2.2.15 - main assets
  */
+
 #define ASSET_HASH_SRB2_PK3       "3182ce524acc2072ddaa81acf4b6a9aa"
 #define ASSET_HASH_ZONES_PK3      "88ff4c300851ccdb0406698eadd89907"
 #define ASSET_HASH_CHARACTERS_PK3 "5c5936b8a690e007c0939bd0785a41fb"
